mydb-app-example/base/deployment-resource-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: famous-quotes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: famous-quotes
  template:
    metadata:
      labels:
        app: famous-quotes
    spec:
      containers:
      - env:
        - name: QUOTES_DATABASE
          valueFrom:
            secretKeyRef:
              key: DATABASE
              name: mysql
        - name: QUOTES_ROOT_PASSWORD
          valueFrom:
            secretKeyRef:
              key: ROOT_PASSWORD
              name: mysql
        - name: QUOTES_USER
          valueFrom:
            secretKeyRef:
              key: USER
              name: mysql
        - name: QUOTES_HOSTNAME
          valueFrom:
            secretKeyRef:
              key: hostname
              name: mysql
        - name: QUOTES_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: mysql
        name: famous-quotes
        image: quay.io/cprakash2118/famous-quotes
        ports:
        - containerPort: 8000
