mydb-app-example/base/service-resource-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: famous-quotes
spec:
  type: ClusterIP
  selector:
    app: famous-quotes
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
